Increase permgen memory for fork run scripted tests